// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`See packages command should render the proper values for international flight 1`] = `
Array [
  "https://res.southwestvacations.com/search/ExternalFormPost.aspx?cmpid=SWA-INPATH&utm_campaign=mockValue&utm_medium=mockValue&utm_source=mockValue&utm_term=mockValue&utm_content=D!intpos&cpmid=SWA-INPATH&currentculture=&foPrefFlightInfo=WN1504~WGA%7CWN1504~WGA&gsAge1=&gsAge2=&gsAge3=&gsAge4=&gsDepartureDate=2015-11-10&gsDestination=AUS&gsLengthOfStay=30&gsNumberOfTravelers=1&gsOrigin=ATL&gsReturnDate=2015-12-10&gssourcecode=INPATH&gsVacationType=AH01&gsVendor=WNI&plcode=SWAVINTL",
]
`;

exports[`See packages command should render the proper values for international flight when isWebView true 1`] = `
Array [
  "https://res.southwestvacations.com/search/ExternalFormPost.aspx?cmpid=SWA-INPATH&utm_campaign=mockValue&utm_medium=mockValue&utm_source=mockValue&utm_term=app&utm_content=D!appINT&cpmid=SWA-INPATH&currentculture=&foPrefFlightInfo=WN1504~WGA%7CWN1504~WGA&gsAge1=&gsAge2=&gsAge3=&gsAge4=&gsDepartureDate=2015-11-10&gsDestination=AUS&gsLengthOfStay=30&gsNumberOfTravelers=1&gsOrigin=ATL&gsReturnDate=2015-12-10&gssourcecode=INPATH&gsVacationType=AH01&gsVendor=WNI&plcode=SWAVINTL",
]
`;

exports[`See packages command should send additional parameters in path url 1`] = `
Array [
  "https://res.southwestvacations.com/search/ExternalFormPost.aspx?cmpid=SWA-INPATH&utm_campaign=mockValue&utm_medium=mockValue&utm_source=mockValue&utm_term=mockValue&utm_content=D!mobile&additionalParam=mockValue&cpmid=SWA-INPATH&currentculture=&foPrefFlightInfo=WN1504~WGA%7CWN1504~WGA&gsAge1=&gsAge2=&gsAge3=&gsAge4=&gsDepartureDate=2015-11-10&gsDestination=AUS&gsLengthOfStay=30&gsNumberOfTravelers=1&gsOrigin=ATL&gsReturnDate=2015-12-10&gssourcecode=INPATH&gsVacationType=AH08&gsVendor=WNT&plcode=",
]
`;

exports[`See packages command should should open default url 1`] = `
Array [
  "https://res.southwestvacations.com/search/ExternalFormPost.aspx?cmpid=SWA-INPATH&utm_campaign=mockValue&utm_medium=mockValue&utm_source=mockValue&utm_term=mockValue&utm_content=D!mobile&cpmid=SWA-INPATH&currentculture=&foPrefFlightInfo=WN1504~WGA%7CWN1504~WGA&gsAge1=&gsAge2=&gsAge3=&gsAge4=&gsDepartureDate=2015-11-10&gsDestination=AUS&gsLengthOfStay=30&gsNumberOfTravelers=1&gsOrigin=ATL&gsReturnDate=2015-12-10&gssourcecode=INPATH&gsVacationType=AH08&gsVendor=WNT&plcode=",
]
`;

exports[`See packages command should should open default url when isWebView is true 1`] = `
Array [
  "https://res.southwestvacations.com/search/ExternalFormPost.aspx?cmpid=SWA-INPATH&utm_campaign=mockValue&utm_medium=mockValue&utm_source=mockValue&utm_term=app&utm_content=D!app&cpmid=SWA-INPATH&currentculture=&foPrefFlightInfo=WN1504~WGA%7CWN1504~WGA&gsAge1=&gsAge2=&gsAge3=&gsAge4=&gsDepartureDate=2015-11-10&gsDestination=AUS&gsLengthOfStay=30&gsNumberOfTravelers=1&gsOrigin=ATL&gsReturnDate=2015-12-10&gssourcecode=INPATH&gsVacationType=AH08&gsVendor=WNT&plcode=",
]
`;
